--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,20 @@ services:
   backend:
     image: backend
     build: ./backend
+
+  db:
+    image: database
+    build: ./mongo
+    restart: always
+    volumes:
+      - db-data:/data/db
+    ports:
+      - 27017
+    expose:
+      - 27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+
+volumes:
+  db-data:
