--- a/extractor/Dockerfile
+++ b/extractor/Dockerfile
@@ -4,17 +4,18 @@ FROM python:3.8-alpine
 RUN apk update && apk upgrade
 RUN apk add g++ 
 
-# Insert run script in crontab
-COPY cron-snippet etc/cron-snippet
-WORKDIR /etc/
-RUN cat cron-snippet >> ./crontabs/root
-
 # Install requirements
 WORKDIR /app/
 COPY requirements.txt .
 RUN pip3 install -r requirements.txt
 
+# Insert run script in crontab
+COPY cron-snippet /etc/cron-snippet
+WORKDIR /etc/
+RUN cat cron-snippet >> ./crontabs/root
+
 # Copy application code
+WORKDIR /app/
 COPY ./src/ ./src/
 
 # Start CRON
