--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     image: backend
     build: ./backend
     env_file:
-      - .env
+      - ./env_template/env-extractor
     networks:
       - private
 
